updated index.html and css

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 					<h6 id="address">${address}</h6>
 				</div>
 				<div id="rih-right">
-					<label id="numvote">${numvote}</label>
-					<label id="votes">${votes}</label>
+					<div id="numvote">${numvote}</div>
+					<div id="votes">${votes}</div>
 				</div>
 			</div><!-- rih -->
 		</div>
