updated rating and vote position, resto name size and added votes string to votes in index.js

--- a/static/index.html
+++ b/static/index.html
@@ -29,13 +29,14 @@
 					<div id="restaurant-info-header" ><!-- rih -->
 						<img class="result-thumbnail" id="resto-pic" src="" width="150" height="150">
 						<div id="rih-center">
-							<p class="result-name" id="name"><b>${name}</b></p>
+							<p class="result-name" id="name">${name}</p>
 							<p class="result-locality" id="local">${locality}</p>
 							<p class="result-address" id="address">${address}</p>
 						</div>
 						<div id="rih-right">
-							<div width="5"><p class="result-ratings" id="rating">${ratings}</p></div>
-							<p class="result-votes" id="votes">${votes}</p>
+							<div id="rating-container"><p class="result-ratings" id="rating">${ratings}</p></div>
+							<div><p class="result-votes" id="votes">${votes}</p>
+							</div>
 						</div>
 					</div><!-- rih -->
 				</div>
